log
Sun 24 Sep 2023 10:14:52 PM UTC: 
 heap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
efb41bc
Sun 24 Sep 2023 10:17:03 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:52: error: used struct type value where scalar is required
   22 |     void* top = (pq->size != 0) ? pq->heapArray[0] ? NULL;
      |                                                    ^
heap.c:22:58: error: expected ‘:’ before ‘;’ token
   22 |     void* top = (pq->size != 0) ? pq->heapArray[0] ? NULL;
      |                                                          ^
Compilation failed
3b30747
Sun 24 Sep 2023 10:17:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:52: error: type mismatch in conditional expression
   22 |     void* top = (pq->size != 0) ? pq->heapArray[0] : NULL;
      |                                                    ^
Compilation failed
33adee5
Sun 24 Sep 2023 10:19:50 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:26:17: error: incompatible types when initializing type ‘void *’ using type ‘heapElem’ {aka ‘struct nodo’}
   26 |     void* top = pq->heapArray[0];
      |                 ^~
Compilation failed
9a6e41e
Sun 24 Sep 2023 10:21:16 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:26:5: error: cannot convert to a pointer type
   26 |     void* top = (void*)pq->heapArray[0];
      |     ^~~~
Compilation failed
fec6498
Sun 24 Sep 2023 10:23:36 PM UTC: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
78a45e7
Sun 24 Sep 2023 10:32:43 PM UTC: 
 heap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:35:74: error: expected ‘)’ before ‘;’ token
   35 |       pq->heapArray = realloc(pq->heapArray, pq->capac * sizeof(heapElem);
      |                              ~                                           ^
      |                                                                          )
heap.c:35:75: error: expected ‘;’ before ‘}’ token
   35 |       pq->heapArray = realloc(pq->heapArray, pq->capac * sizeof(heapElem);
      |                                                                           ^
      |                                                                           ;
   36 |     }
      |     ~                                                                      
Compilation failed
5ed4ffe
Sun 24 Sep 2023 10:33:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
43d5f2f
Sun 24 Sep 2023 10:37:33 PM UTC: 
 heap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 25/70
d2de2ad
